# cta_exam

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PROJECT_STATUS.md  Procfile  README.md  agent_design_tax_exam_service.md  pyproject.toml  render.yaml  run_web.bat  tax_exam_service.db  wrangler.toml
.logs/: README.md
config/: README.md
data/: README.md  questions.db
data/2021/: README.md
data/2022/: README.md
data/2023/: README.md
data/2024/: README.md
data/2025/: README.md
data/OX문제/: README.md  국세기본법.txt  국세징수법.txt  법인세법.txt  부가가치세법.txt  상법ox.txt  소득세법.txt  재정학ox.txt  조세범처벌법.txt  행정소송법ox.txt  회계학개론.txt
data/review/: README.md
docs/: ARCHITECTURE.md  DB_SERVICE_SCHEMA_PLAN.md  DEPLOY_WEBAPP_NONDEV.md  HANDOVER_TAX_EXAM_APP.md  README.md  ROADMAP.md
functions/api/: _middleware.js  contact.js  notices.js  questions.js
scripts/: README.md  README_2025_loader.md  build_ox_from_questions.py  data_paths.py  extract_published_answers_from_hwp.py  fill_missing_answers_gemini.py  import_ox_text.py  import_solution_text.py  load_2025_ox_questions.py  load_2025_questions.py  load_pdf_questions.py  migrate_to_supabase.py  revalidate_mismatch_gemini.py  sync_actual_answers_and_grade.py  sync_distributed_answers.py
supabase/: schema.sql
webapp/: README.md  ads.txt  contact.html  contact.js  game.css  game.html  game.js  index.html  local-user-data.js  mock-exam.html  mock-exam.js  notice.html  notice.js  ox-mode.html  ox-mode.js  qa.html  qa.js  server.py  skin.js  styles.css  wrong-note.html  wrong-note.js
(+19 files in other folders)
