[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-exam-app"
version = "0.2.0"
description = "세무사 돌돌이 - tax exam question collection and learning service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "pdfplumber>=0.11.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
